--- a/index.html
+++ b/index.html
@@ -24,31 +24,11 @@
                 <div class="stats">
                     <span>Score: <span id="score">0</span></span>
                     <span>Combo: <span id="combo">x1</span></span>
-                    <span>Knives: <span id="knives">10</span></span>
+                    <span>Power: <span id="power">1</span></span>
                 </div>
                 <div class="buttons">
                     <button id="profile-btn">Profile</button>
                     <button id="shop-btn">Shop</button>
-                    <button id="settings-btn">Settings</button>
-                </div>
-            </div>
-            
-            <div class="ability-bar">
-                <div class="ability" data-ability="dash">
-                    <span class="key">SHIFT</span>
-                    <div class="cooldown"></div>
-                </div>
-                <div class="ability" data-ability="teleport">
-                    <span class="key">E</span>
-                    <div class="cooldown"></div>
-                </div>
-                <div class="ability" data-ability="time-slow">
-                    <span class="key">Q</span>
-                    <div class="cooldown"></div>
-                </div>
-                <div class="ability" data-ability="knife-rain">
-                    <span class="key">R</span>
-                    <div class="cooldown"></div>
                 </div>
             </div>
         </div>
