--- a/index.html
+++ b/index.html
@@ -3,73 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta name="format-detection" content="telephone=no">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="MobileOptimized" content="176">
-    <meta name="HandheldFriendly" content="True">
-    <meta name="robots" content="noindex,nofollow">
     <title>Knife Clicker</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="game-container">
-        <canvas id="gameCanvas"></canvas>
-        
-        <!-- Score Display -->
-        <div class="score-display">
-            <div class="score">
-                <img src="images/ui/score-icon.svg" alt="Score">
-                <span id="score">0</span>
-            </div>
-            <div class="combo">
-                <img src="images/ui/combo-icon.svg" alt="Combo">
-                <span id="combo">x1</span>
-            </div>
-            <div class="power">
-                <img src="images/ui/power-icon.svg" alt="Power">
-                <span id="power">1</span>
-            </div>
+    <canvas id="gameCanvas"></canvas>
+
+    <div class="ui-container">
+        <div class="score-container">
+            <img src="images/ui/score-icon.svg" alt="Score" class="score-icon">
+            <span id="score" class="score-text">0</span>
         </div>
-
-        <!-- Shop Button -->
-        <button id="shop-btn" class="shop-button">
-            <img src="images/ui/shop-icon.svg" alt="Shop">
-            Shop
-        </button>
-
-        <!-- Shop Modal -->
-        <div id="shop-modal" class="modal hidden">
-            <div class="modal-content">
-                <h2>Shop</h2>
-                <div class="shop-items">
-                    <div class="shop-item" data-item="power">
-                        <img src="images/powerups/power-upgrade.svg" alt="Power Upgrade">
-                        <span class="item-name">Power Up</span>
-                        <span class="item-cost">100</span>
-                    </div>
-                    <div class="shop-item" data-item="combo">
-                        <img src="images/powerups/combo-multiplier.svg" alt="Combo Multiplier">
-                        <span class="item-name">Combo Boost</span>
-                        <span class="item-cost">200</span>
-                    </div>
-                    <div class="shop-item" data-item="auto">
-                        <img src="images/powerups/auto-click.svg" alt="Auto Clicker">
-                        <span class="item-name">Auto Clicker</span>
-                        <span class="item-cost">500</span>
-                    </div>
-                </div>
-                <button id="close-shop" class="close-button">Close</button>
-            </div>
+        <div class="combo-container">
+            <img src="images/ui/combo-icon.svg" alt="Combo" class="combo-icon">
+            <span id="combo" class="combo-text">x1.0</span>
+        </div>
+        <div class="power-container">
+            <img src="images/ui/power-icon.svg" alt="Power" class="power-icon">
+            <span id="power" class="power-text">1</span>
         </div>
     </div>
 
-    <!-- Effects Layer -->
-    <div id="effects-layer"></div>
+    <button id="shop-btn">
+        <img src="images/ui/shop-icon.svg" alt="Shop" class="shop-icon">
+    </button>
 
-    <!-- Load Scripts -->
-    <script src="bundle.js"></script>
+    <div id="shop-modal" class="modal hidden">
+        <div class="modal-header">
+            <h2 class="modal-title">Shop</h2>
+            <button id="close-shop" class="close-btn">&times;</button>
+        </div>
+        <div class="shop-items">
+            <div class="shop-item" data-item="power">
+                <img src="images/powerups/power-upgrade.svg" alt="Power Up" class="item-icon">
+                <div class="item-name">Power Up</div>
+                <div class="item-description">Increases base click power</div>
+                <div class="item-cost">100</div>
+            </div>
+            <div class="shop-item" data-item="combo">
+                <img src="images/powerups/combo-multiplier.svg" alt="Combo Boost" class="item-icon">
+                <div class="item-name">Combo Boost</div>
+                <div class="item-description">Increases max combo</div>
+                <div class="item-cost">200</div>
+            </div>
+            <div class="shop-item" data-item="auto">
+                <img src="images/powerups/auto-click.svg" alt="Auto Clicker" class="item-icon">
+                <div class="item-name">Auto Clicker</div>
+                <div class="item-description">Clicks automatically</div>
+                <div class="item-cost">500</div>
+            </div>
+        </div>
+    </div>
 
     <script>
         window.addEventListener('DOMContentLoaded', () => {
@@ -90,5 +75,7 @@
             window.shop = new Shop();
         });
     </script>
+
+    <script src="bundle.js"></script>
 </body>
 </html>
