Исправлена инициализация игры:
- Добавлены модули ES6
- Исправлена загрузка скриптов
- Убран bundle.js

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Knife Throwing Game</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <link rel="stylesheet" href="styles.css">
+    <script type="module" src="game/mechanics.js"></script>
+    <script type="module" src="game/audio.js"></script>
+    <script type="module" src="game.js"></script>
 </head>
 <body>
     <!-- Game Canvas -->
